--- a/write.html
+++ b/write.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
 
-<form action="/write" method="POST">
+<form action="/write" method="POST" enctype="text/plain">
     <input type="text" name="title"/><br/>
     <button value="OK" type="submit">Submit</button>
 </form>
